{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4ebabb5d-714c-4efd-9fcf-21160313512d",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f5af7927-5a9a-4817-bd0c-2e1a505c91d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandPressed",
                    "type": "Button",
                    "id": "97139d3b-3f9a-4a9c-8f0c-d396b41a39c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandPressed",
                    "type": "Button",
                    "id": "a9af0d11-08bd-47f5-914b-98c89e4190ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandReleased",
                    "type": "Button",
                    "id": "75c64c26-b1c5-423e-94f7-5e3a3662b537",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandReleased",
                    "type": "Button",
                    "id": "cc1cbe28-4ef0-422f-aae9-c0fea4fa5365",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "942c2f27-634f-4f1f-9fa3-1e9e859f7a31",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3d3519a-1780-4079-8645-b2babe95359e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0764146-f768-4cd2-8302-c989c83e3291",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecb63b80-6f7d-466c-90e7-2a842feb04a1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a30b8b3-6cee-42ff-8e7b-5081e64c501f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c00b002-047e-40ef-8c20-eecddcfc5d93",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}